<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@null"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_travel"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:layout_centerInParent="true"
                />

            <ImageView
                android:id="@+id/img_travel_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_black"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <!--<EditText
            android:id="@+id/edt_travel_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:hint="@string/name"
            android:background="@drawable/edt_selector_bg"
            android:padding="@dimen/dp10"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/dp10"
            />-->
        <Spinner
            android:id="@+id/spin_travel_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/dp10"
            />

        <EditText
            android:id="@+id/edt_travel_train_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:padding="@dimen/dp10"
            android:hint="@string/train_name"
            android:singleLine="true"
            android:background="@drawable/edt_selector_bg"
            android:layout_marginBottom="@dimen/dp10"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/dp10"
            >
            <EditText
                android:id="@+id/edt_travel_amount"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/edt_height"
                android:hint="@string/amount"
                android:inputType="number"
                android:background="@drawable/edt_selector_bg"
                android:padding="@dimen/dp10"
                android:layout_marginRight="5dp"
                />
            <EditText
                android:id="@+id/edt_travel_date"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/edt_height"
                android:hint="@string/date"
                android:focusable="false"
                android:clickable="true"
                android:background="@drawable/edt_selector_bg"
                android:padding="@dimen/dp10"
                android:layout_marginRight="5dp"
                />
            <EditText
                android:id="@+id/edt_travel_time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/edt_height"
                android:hint="@string/time"
                android:focusable="false"
                android:clickable="true"
                android:background="@drawable/edt_selector_bg"
                android:padding="@dimen/dp10"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/dp10"
            >
            <EditText
                android:id="@+id/edt_travel_coach"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/edt_height"
                android:hint="@string/coach_no"
                android:maxLength="5"
                android:background="@drawable/edt_selector_bg"
                android:padding="@dimen/dp10"
                android:layout_marginRight="5dp"
                />
            <EditText
                android:id="@+id/edt_travel_seat"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/edt_height"
                android:hint="@string/seat_no"
                android:inputType="number"
                android:maxLength="3"
                android:singleLine="true"
                android:background="@drawable/edt_selector_bg"
                android:padding="@dimen/dp10"
                android:layout_marginRight="5dp"
                />
            <EditText
                android:id="@+id/edt_travel_boarding"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/edt_height"
                android:hint="@string/boarding"
                android:singleLine="true"
                android:background="@drawable/edt_selector_bg"
                android:padding="@dimen/dp10"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/edt_travel_pnr"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:padding="@dimen/dp10"
            android:hint="@string/pnr_no"
            android:singleLine="true"
            android:background="@drawable/edt_selector_bg"
            android:layout_marginBottom="@dimen/dp10"
            />

        <EditText
            android:id="@+id/edt_travel_message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:padding="@dimen/dp10"
            android:hint="@string/message"
            android:singleLine="true"
            android:background="@drawable/edt_selector_bg"
            android:layout_marginBottom="@dimen/dp10"
            />

        <ImageView
            android:id="@+id/img_travel_save"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_train"
            />
    </LinearLayout>
</RelativeLayout>