<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@null"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_banking"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:layout_centerInParent="true"
                />
            <ImageView
                android:id="@+id/img_banking_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_black"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <EditText
            android:id="@+id/edt_task_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:hint="@string/name"
            android:background="@drawable/edt_selector_bg"
            android:padding="@dimen/dp10"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/dp10"
            />

        <EditText
            android:id="@+id/edt_task_amount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:hint="@string/amount"
            android:inputType="number"
            android:background="@drawable/edt_selector_bg"
            android:padding="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp10"
            />

        <EditText
            android:id="@+id/edt_task_message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:padding="@dimen/dp10"
            android:singleLine="true"
            android:hint="@string/message"
            android:background="@drawable/edt_selector_bg"
            android:layout_marginBottom="@dimen/dp10"
            />

        <ImageView
            android:id="@+id/img_banking_save"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_credit"
            />
    </LinearLayout>
</RelativeLayout>